WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218903
[WPE] Prevent elements getting stuck in a pressed state when scrolling on a touchscreen
https://bugs.webkit.org/show_bug.cgi?id=218903
Summary
[WPE] Prevent elements getting stuck in a pressed state when scrolling on a t...
Joshua Watt
Reported
2020-11-13 07:36:45 PST
[WPE] Prevent elements getting stuck in a pressed state when scrolling on a touchscreen
Attachments
Patch
(673 bytes, patch)
2020-11-13 07:37 PST
,
Joshua Watt
no flags
Details
Formatted Diff
Diff
Patch
(1.77 KB, patch)
2020-11-17 08:05 PST
,
Joshua Watt
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Watt
Comment 1
2020-11-13 07:37:12 PST
Created
attachment 414042
[details]
Patch
Joshua Watt
Comment 2
2020-11-13 07:40:57 PST
If the scroll controller prevents touch up events from propagating to the page, the underlying elements (e.g. buttons) get stuck in the "pressed" state. This is particularly noticeable on sensitive touchscreens where a small amount of movement (which triggers a scroll) is unavoidable.
Philippe Normand
Comment 3
2020-11-17 07:50:24 PST
This would at least need a ChangeLog entry, see this page for the full procedure :)
https://webkit.org/contributing-code/
Joshua Watt
Comment 4
2020-11-17 08:05:09 PST
Created
attachment 414342
[details]
Patch
Adrian Perez
Comment 5
2020-11-19 05:53:36 PST
Comment on
attachment 414342
[details]
Patch Thanks! The explanation in the ChangeLog makes sense to me and Carlos García also thinks the change is correct :)
EWS
Comment 6
2020-11-19 05:56:02 PST
Committed
r270022
: <
https://trac.webkit.org/changeset/270022
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414342
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug