[WPE] Prevent elements getting stuck in a pressed state when scrolling on a touchscreen https://bugs.webkit.org/show_bug.cgi?id=218903

Patch by Joshua Watt <JPEW.hacker@gmail.com> on 2020-11-19
Reviewed by Adrian Perez de Castro.

Stops the scroll gesture controller from eating touch up events and
preventing them from propagating to the page when the controller is
handling a scroll event. If the scroll logic prevents the events from
propagating to the page, elements on the page (e.g. buttons) can get
stuck in a pressed state when the user lifts their finger.

* UIProcess/API/wpe/ScrollGestureController.cpp:
(WebKit::ScrollGestureController::handleEvent):

Canonical link: https://commits.webkit.org/231763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270022 268f45cc-cd09-0410-ab3c-d52691b4dbfc